# console-esp32-c3

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults.esp32c3
data/: config.json
docs/: esp32-c3.drawio
main/: CMakeLists.txt  config.h  idf_component.yml  main.cpp
main/led/: LedStripService.h
